# pyo3-rust-py-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
python/: benchmark.py  pure_python.py
src/: lib.rs
tests/: test_bridge.py
