[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pyo3-rust-py-bridge"
version = "0.1.0"
description = "A minimal PyO3 + rayon extension showcasing GIL-free, multi-threaded CPU-bound compute callable from Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pyo3-rust-py-bridge contributors" }]
keywords = ["pyo3", "rust", "rayon", "gil", "parallel", "monte-carlo", "ffi", "maturin"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/maxim955827848/pyo3-rust-py-bridge"
Repository = "https://github.com/maxim955827848/pyo3-rust-py-bridge"

[tool.maturin]
# The compiled module is imported as `pyo3_rust_py_bridge` (matches lib.name).
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
